--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^7.3.3",
     "puppeteer": "^6.0.0",
     "xlsx": "^0.16.9"
   }
